@@ -109,6 +109,9 @@ checkps(intnum(t=0,[1-x^2,-1/2],1/sqrt(1-t)),2-2*x)
 f(t)=(t^2*(1-t))^(1/3);
 checkps(intnum(t=[x^3,-1/3],[1-x^3,-2/3],(2/3*t-t^2)/(t^2*(1-t))^(2/3)),f(1-x^3)-f(x^3))
 
+\p38
+intnum(x=-oo,[0,-1/2],1/sqrt(-x*(x^4+1)))
+
 \pb20
 intnumromb(x=0,1,sin(x))
 intnumromb(x=0,1,sin(x), 1)
